pricing panel implemented

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item mx-sm-4 active">
-            <a class="nav-link" href="#">Description </a>
+            <a class="nav-link" href="#jumbotron">Description </a>
           </li>
           <li class="nav-item mx-sm-4 active">
             <a class="nav-link" href="#">Pricing</a>
@@ -53,14 +53,53 @@
       </div>
     </nav>
     <main class="container">
-      <img src="./images/jumboImageLarge.jpg" class="img-fluid" alt="A Siberian Husky and Johnny Depp posing with a Sauvage bottle">
-      <div class="jumbotron bg-white">
+      <img src="./images/jumboImageLarge.jpg" class="img-fluid" alt="A Siberian Husky and Johnny Depp posing with a Sauvage bottle" id="jumbotronImage">
+      <div class="jumbotron bg-white" id="jumbotron">
         <h1 class="display-4">Sauvage</h1>
         <p class="lead">Sauvage is an act of creation inspired by wide-open spaces. An ozone blue sky sprawled above a rocky landscape, white-hot beneath the desert sun.</p>
         <hr class="my-4">
-        <p class="lead">
-          <a class="btn btn-dark btn-lg" href="#" role="button">Learn more</a>
-        </p>
+      </div>
+      <h2 class="h2 text-center">Pricing</h2>
+      <div class="row justify-content-between">
+        <div class="col-md">
+          <div class="container justify-content-center borderpricingPanel">
+            <div class="row justify-content-center">
+              <img src="images/toilette.jpg" class="img-fluid mb-2" alt="a sauvage eau de toilette bottle">
+            </div>
+            <header>
+              <p class="h4">Eau De Toilette</p>
+            </header>
+            <hr class="my-1">
+            <p class="lead">Spray - 60ml</p>
+            <p>Price: $99</p>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="container justify-content-center borderpricingPanel">
+            <div class="row justify-content-center">
+              <img src="images/parfum.jpg" class="img-fluid mb-2" alt="a sauvage eau de parfum bottle">
+            </div>
+            <header>
+              <p class="h4">Eau De Parfum</p>
+            </header>
+            <hr class="my-1">
+            <p class="lead">Spray - 60ml</p>
+            <p>Price: $119</p>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="container justify-content-center borderpricingPanel">
+            <div class="row justify-content-center">
+              <img src="images/coolSpray.jpg" class="img-fluid mb-2" alt="a sauvage cool spray bottle">
+            </div>
+            <header>
+              <p class="h4">Very Cool Spray</p>
+            </header>
+            <hr class="my-1">
+            <p class="lead">Spray - 100ml</p>
+            <p>Price: $112</p>
+          </div>
+        </div>
       </div>
     </main>
     <script
