added reviews section

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <a class="nav-link" href="#jumbotron">Description </a>
           </li>
           <li class="nav-item mx-sm-4 active">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item mx-sm-4 active">
-            <a class="nav-link" href="#">Reviews</a>
+            <a class="nav-link" href="#reviews">Reviews</a>
           </li>
         </ul>
         </form>
@@ -65,7 +65,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/LnoumTpLMfk?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
-      <h2 class="h2 text-center">Pricing</h2>
+      <h2 class="h2 text-center mb-4" id="pricing">Pricing</h2>
       <div class="row justify-content-between">
         <div class="col-md">
           <div class="container justify-content-center borderpricingPanel">
@@ -116,6 +116,22 @@
           </div>
         </div>
       </div>
+
+      <h2 class="h2 text-center mt-4 mb-4" id="reviews">Reviews</h2>
+      <blockquote class="blockquote text-center mb-3">
+        <p class="mb-0">I’m in love with this cologne and I get compliments everywhere I go. Strong scent that lasts, and very soothing. If I had one fragrance for the rest of my life, this would be the one. My favorite in my 20 cologne collection.</p>
+        <footer class="blockquote-footer">Johnny B from <cite title="Amazon">Amazon</cite></footer>
+      </blockquote>
+      <hr class="mb-3 w-75">
+      <blockquote class="blockquote text-center mb-3">
+        <p class="mb-0">Its not fake, its the real deal. Has a wonderful long lasting scent and boosts your confidence. This cologne will definitely make people turn their heads. I sprayed on Sauvage this morning and I STILL smell it at night time. Its crazy how long this cologne lasts.... and it smells amazing the whole time. Definitely a good pick for going out at night or a date.</p>
+        <footer class="blockquote-footer">Grey Matter from <cite title="Amazon">Amazon</cite></footer>
+      </blockquote>
+      <hr class="mb-3 w-75">
+      <blockquote class="blockquote text-center mb-3">
+        <p class="mb-0">First of all it's original; the real deal😊, secondly I love the top note and the middle note; that rough freshness of a peppery Bergamot and the noble, lingering scent of an amber wood. Right now I'm in Jamaica 🇯🇲 and so far the compliments are raining 🌧. Finally it's worth the money... go and get it!🏃🏽 #Love&Respect ❤👊🏼</p>
+        <footer class="blockquote-footer">Miguel from <cite title="Amazon">Amazon</cite></footer>
+      </blockquote>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
