--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 60ml</p>
             <div class="row align-items-center buyItem">
-              <p class="col price">Price: $99</p>
-              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="price">Price: $99</p>
+              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
@@ -94,8 +94,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 60ml</p>
             <div class="row align-items-center buyItem">
-              <p class="col price">Price: $119</p>
-              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="price">Price: $119</p>
+              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
@@ -110,8 +110,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 100ml</p>
             <div class="row align-items-center buyItem">
-              <p class="col price">Price: $112</p>
-              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="price">Price: $112</p>
+              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
@@ -128,11 +128,34 @@
         <footer class="blockquote-footer">Grey Matter from <cite title="Amazon">Amazon</cite></footer>
       </blockquote>
       <hr class="mb-3 w-75">
-      <blockquote class="blockquote text-center mb-3">
+      <blockquote class="blockquote text-center mb-4">
         <p class="mb-0">First of all it's original; the real deal😊, secondly I love the top note and the middle note; that rough freshness of a peppery Bergamot and the noble, lingering scent of an amber wood. Right now I'm in Jamaica 🇯🇲 and so far the compliments are raining 🌧. Finally it's worth the money... go and get it!🏃🏽 #Love&Respect ❤👊🏼</p>
         <footer class="blockquote-footer">Miguel from <cite title="Amazon">Amazon</cite></footer>
       </blockquote>
     </main>
+
+    <!-- <nav class="navbar navbar-expand-md navbar-light bg-light" id="footer"> -->
+      <ul class="nav flex-column flex-sm-row align-items-center justify-content-center bg-secondary">
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="#">Disabled</a>
+        </li>
+      </ul>
+      <ul class="nav flex-column flex-sm-row align-items-center justify-content-center bg-secondary">
+        <li class="nav-item">
+          <p class="nav-link text-warning mb-1 copyrightHTML">Copyright 2019, Jimmy Njoku</p>
+        </li>
+      </ul>
+    <!-- </nav> -->
+    
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
