--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 60ml</p>
             <div class="row align-items-center buyItem">
-              <p class="price">Price: $99</p>
-              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="col price">Price: $99</p>
+              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
@@ -94,8 +94,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 60ml</p>
             <div class="row align-items-center buyItem">
-              <p class="price">Price: $119</p>
-              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="col price">Price: $119</p>
+              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
@@ -110,8 +110,8 @@
             <hr class="my-1">
             <p class="lead">Spray - 100ml</p>
             <div class="row align-items-center buyItem">
-              <p class="price">Price: $112</p>
-              <button class="btn btn-primary btn-sm" type="submit">Buy</button>
+              <p class="col price">Price: $112</p>
+              <button class="col btn btn-primary btn-sm" type="submit">Buy</button>
             </div>
           </div>
         </div>
