--- a/index.html
+++ b/index.html
@@ -137,16 +137,13 @@
     <!-- <nav class="navbar navbar-expand-md navbar-light bg-light" id="footer"> -->
       <ul class="nav flex-column flex-sm-row align-items-center justify-content-center bg-secondary">
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Active</a>
+          <a class="nav-link text-light" href="#">Privacy</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Link</a>
+          <a class="nav-link text-light" href="#">Terms</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" href="#">Disabled</a>
+          <a class="nav-link text-light" href="#">Contact</a>
         </li>
       </ul>
       <ul class="nav flex-column flex-sm-row align-items-center justify-content-center bg-secondary">
